--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
+    "node-sass": "^4.14.1",
     "passport": "^0.4.1",
+    "react-bootstrap-table-next": "^4.0.3",
     "sequelize": "^6.3.5"
   }
 }
