--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Scouting application for Steel Talons robotics team",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server",
+    "start-watch": "nodemon server",
+    "dev": "concurrently \"npm run start-watch\" \"cd client && npm start\""
   },
   "repository": {
     "type": "git",
@@ -25,7 +28,11 @@
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0"
   }
 }
