--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:5000",
   "devDependencies": {
     "react-router-dom": "^5.2.0"
   }
