--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Team5427/steel-scout-v2#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -31,6 +32,7 @@
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "react-bootstrap-table-next": "^4.0.3",
+    "react-router-dom": "^5.2.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
