--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
-    "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-router-dom": "^5.2.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
-    "concurrently": "^5.3.0"
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.7"
   }
 }
